# vow

./: .gitignore  .vowignore  Cargo.toml  DIFF_MODE.md  LICENSE  PRE_PUSH_HOOK.md  README.md  add_none_suggestions.py  clean_suggestions.py  clean_test.py  debug_test.py  fix_duplicates.py  fix_missing_suggestions.py  fix_suggestions.py  input.md  output.md  simple_csharp_test.cs  simple_test.py  test_additional_vulns.rs  test_ai_code.py  test_ai_enhanced.md  test_ai_text.md  test_csharp_vulnerabilities.cs  test_dart_permissions.dart  test_file.py  test_hallucinated.py  test_ignore.py  test_output.json  test_rust_security.rs  test_rust_vulns.rs  test_severity_config.py  test_simple_rust.rs  test_unsafe.rs  test_vendor.css  test_vulnerable_js.js
.vow/: config.yaml  history.json  known-packages.yaml
docs/: PORT_SCANNING.md  book.toml
example/: .vowignore
examples/: port-security-rules.yaml
examples/plugins/simple-rule-plugin/: Cargo.toml  README.md  plugin.toml
examples/plugins/simple-rule-plugin/src/: lib.rs
rules/: js-csrf-detection.yaml  js-idor-detection.yaml  js-mass-assignment.yaml  js-nosql-injection.yaml  js-open-redirect.yaml  js-path-traversal.yaml  js-sql-injection-enhanced.yaml  js-ssti-detection.yaml  js-xss-detection.yaml  php-blind-sqli.yaml  php-crlf-injection.yaml  php-csrf-detection.yaml  php-format-string.yaml  php-graphql-injection.yaml  php-http-request-smuggling.yaml  php-idor-detection.yaml  php-insecure-deserialization.yaml  php-insecure-randomness.yaml  php-integer-overflow.yaml  php-jwt-weakness.yaml  php-ldap-injection.yaml  php-mass-assignment.yaml  php-memory-leak.yaml  php-missing-rate-limiting.yaml  php-nosql-injection.yaml  php-null-pointer-dereference.yaml  php-oauth-misconfiguration.yaml  php-path-traversal.yaml  php-prototype-pollution.yaml  php-race-condition.yaml  php-second-order-sqli.yaml  php-sql-injection.yaml  php-ssrf-detection.yaml  php-template-injection.yaml  php-unrestricted-file-upload.yaml  php-unsafe-reflection.yaml  php-unvalidated-redirect.yaml  php-use-after-free.yaml  php-weak-authentication.yaml  php-weak-cryptography.yaml  (+16 more)
src/: baseline.rs  diff.rs  ignore.rs  lib.rs  main.rs  monorepo.rs  stats.rs
test_dir/: test.py
test_files/: example.css  example.html  test.css  test.html
test_summary/: bad.py
tests/: html_report_test.rs  integration_test.rs  integration_tests.rs  test_fix.rs  (+11 more)
(+271 files in other folders)
