[package]
name = "vow"
version = "0.1.0"
edition = "2024"
description = "A local-first AI output verification engine"
authors = ["Warden <warden@getvow.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/guanchuan1314/vow"
homepage = "https://getvow.dev"
keywords = ["verification", "ai", "security", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
owo-colors = "4.0"
indicatif = "0.17"
regex = "1.10"
walkdir = "2.4"
ignore = "0.4"
base64 = "0.22"
once_cell = "1.19"
rayon = "1.10"
notify = "6.1"
crossbeam-channel = "0.5"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
# tokio removed - using synchronous approach
# futures removed - using synchronous approach
socket2 = "0.5"
trust-dns-resolver = "0.23"
which = "6.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.0"
