[package]
name = "simple-rule-plugin"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core dependencies for WASM plugins
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

# Note: In a real implementation, you would depend on vow-plugin-sdk
# For this example, we define the plugin interface inline